syntax = "proto3";

package v1;

option go_package = "github.com/weetime/agent-matrix/protos/v1;v1";
import "google/protobuf/struct.proto";
import "validate/validate.proto";

message Empty {}

message ID {
  int64 id = 1[json_name = "id"];
}

message OK {
  bool ok = 1;
  string error = 2;
}

message UUID {
  string uuid = 1[json_name = "uuid", (validate.rules).string.uuid = true];
}

message UUIDs {
  repeated UUID uuids = 1;
}

message WorkspaceName {
  string workspaceName = 1;
}

message ProjectName {
  string projectName = 1;
}

message Owner {
  string ownerType = 1;
  string ownerName = 2;
}

message PageRequest {
  enum Sort {
    ASC = 0;
    DESC = 1;
  }
  Sort sort = 1;
  string sortField = 2;
  int64 pageSize = 3;
  oneof way {
    int64 pageNo = 4;
    int64 cursorID = 5;
  }
}

message Total {
  int64 total = 1;
}

message KeyValue {
  string name = 1;
  string value = 2;
}

// Response 响应
// 统一响应格式：code=0表示成功，msg为消息内容，data为响应数据
message Response {
  // code 编码：0表示成功，其他值表示失败
  int32 code = 1;
  // msg 消息内容
  string msg = 2;
  // data 响应数据
  google.protobuf.Struct data = 3;
}
